feature/application - added python implementation